objects/Tour_Off_Time__c.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Tour Off Times</relationshipLabel>
        <relationshipName>Tour_Off_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Day_Of_Week__c</fullName>
        <label>Day Of Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM</fullName>
                </value>
                <value>
                    <fullName>8:30AM</fullName>
                </value>
                <value>
                    <fullName>9:00AM</fullName>
                </value>
                <value>
                    <fullName>9:30AM</fullName>
                </value>
                <value>
                    <fullName>10:00AM</fullName>
                </value>
                <value>
                    <fullName>10:30AM</fullName>
                </value>
                <value>
                    <fullName>11:00AM</fullName>
                </value>
                <value>
                    <fullName>11:30AM</fullName>
                </value>
                <value>
                    <fullName>12:00PM</fullName>
                </value>
                <value>
                    <fullName>12:30PM</fullName>
                </value>
                <value>
                    <fullName>1:00PM</fullName>
                </value>
                <value>
                    <fullName>1:30PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM</fullName>
                </value>
                <value>
                    <fullName>2:30PM</fullName>
                </value>
                <value>
                    <fullName>3:00PM</fullName>
                </value>
                <value>
                    <fullName>3:30PM</fullName>
                </value>
                <value>
                    <fullName>4:00PM</fullName>
                </value>
                <value>
                    <fullName>4:30PM</fullName>
                </value>
                <value>
                    <fullName>5:00PM</fullName>
                </value>
                <value>
                    <fullName>5:30PM</fullName>
                </value>
                <value>
                    <fullName>6:00PM</fullName>
                </value>
                <value>
                    <fullName>6:30PM</fullName>
                </value>
                <value>
                    <fullName>7:00PM</fullName>
                </value>
                <value>
                    <fullName>7:30PM</fullName>
                </value>
                <value>
                    <fullName>8:00PM</fullName>
                </value>
                <value>
                    <fullName>8:30PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM</fullName>
                </value>
                <value>
                    <fullName>8:30AM</fullName>
                </value>
                <value>
                    <fullName>9:00AM</fullName>
                </value>
                <value>
                    <fullName>9:30AM</fullName>
                </value>
                <value>
                    <fullName>10:00AM</fullName>
                </value>
                <value>
                    <fullName>10:30AM</fullName>
                </value>
                <value>
                    <fullName>11:00AM</fullName>
                </value>
                <value>
                    <fullName>11:30AM</fullName>
                </value>
                <value>
                    <fullName>12:00PM</fullName>
                </value>
                <value>
                    <fullName>12:30PM</fullName>
                </value>
                <value>
                    <fullName>1:00PM</fullName>
                </value>
                <value>
                    <fullName>1:30PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM</fullName>
                </value>
                <value>
                    <fullName>2:30PM</fullName>
                </value>
                <value>
                    <fullName>3:00PM</fullName>
                </value>
                <value>
                    <fullName>3:30PM</fullName>
                </value>
                <value>
                    <fullName>4:00PM</fullName>
                </value>
                <value>
                    <fullName>4:30PM</fullName>
                </value>
                <value>
                    <fullName>5:00PM</fullName>
                </value>
                <value>
                    <fullName>5:30PM</fullName>
                </value>
                <value>
                    <fullName>6:00PM</fullName>
                </value>
                <value>
                    <fullName>6:30PM</fullName>
                </value>
                <value>
                    <fullName>7:00PM</fullName>
                </value>
                <value>
                    <fullName>7:30PM</fullName>
                </value>
                <value>
                    <fullName>8:00PM</fullName>
                </value>
                <value>
                    <fullName>8:30PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tour Off Time</label>
    <nameField>
        <displayFormat>TOT-{0000}</displayFormat>
        <label>Tour Off Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour Off Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>